style: :lipstick: main menu under construction

--- a/index.html
+++ b/index.html
@@ -5,8 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Virtual Wallet</title>
     <link rel="stylesheet" href="css/style.css"/>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    
+    <div class="banner">
+
+    </div>
+    <div class="item_1">
+        <div class="logo_nombre">
+            <img src="storage/img/icono.png" />
+            <h1>INVETO</h1>
+        </div>
+        <div class="menu">
+            <img src="storage/img/menu.png" />
+        </div>
+    </div>
+    <div class="item_2">
+        <div class="nombre_user">
+            <h1>Hi, Arthur!</h1>
+            <p>Here's Your Balance.</p>
+        </div>
+    </div>
+    <div class="ganancias">
+        <div class="item_3">
+            <h5>SAVINGS</h5>
+            <H3>$15,615</H3>
+            <progress value="80" max="100"></progress>
+        </div>
+        <div class="item_4">
+            <h5>ASSETS</h5>
+            <H3>$9,615</H3>
+            <progress value="30" max="100"></progress>
+        </div>
+    </div>
+    <div class="menu_blanco">
+        <div class="activities"><h6>Activities</h6></div>
+        <div class="item_5">
+            <div class="cards">
+                <div class="card_1">
+                    <img src="storage/img/card1.png">
+                    <h4>Account</h4>
+                </div>
+                <div class="card_2">
+                    <img src="storage/img/card2.png">
+                    <h4>Privacy</h4>
+                </div>
+                <div class="card_3">
+                    <img src="storage/img/card3.png">
+                    <h4>help</h4>
+                </div>
+            </div>
+        </div>
+        <div class="Transactions"><h6>Transactions</h6></div>
+        
+    </div>
 </body>
 </html>
