style: :lipstick: main menu finished

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <div class="banner">
-
     </div>
     <div class="item_1">
         <div class="logo_nombre">
@@ -38,26 +37,40 @@
             <progress value="30" max="100"></progress>
         </div>
     </div>
-    <div class="menu_blanco">
-        <div class="activities"><h6>Activities</h6></div>
-        <div class="item_5">
-            <div class="cards">
-                <div class="card_1">
-                    <img src="storage/img/card1.png">
-                    <h4>Account</h4>
-                </div>
-                <div class="card_2">
-                    <img src="storage/img/card2.png">
-                    <h4>Privacy</h4>
-                </div>
-                <div class="card_3">
-                    <img src="storage/img/card3.png">
-                    <h4>help</h4>
-                </div>
+    <div class="menu_blanco"> </div>
+    <div class="item_5">
+    <div class="activities"><h6>Activities</h6></div>
+        <div class="cards">
+            <div class="card_1">
+                <img src="storage/img/card1.png">
+                <h4>Account</h4>
+            </div>
+            <div class="card_2">
+                <img src="storage/img/card2.png">
+                <h4>Privacy</h4>
+            </div>
+            <div class="card_3">
+                <img src="storage/img/card3.png">
+                <h4>help</h4>
             </div>
         </div>
+    </div>
+    <div class="item_6">
         <div class="Transactions"><h6>Transactions</h6></div>
-        
+            <div class="compras">
+                    <img src="storage/img/food.png"> 
+                    <img src="storage/img/shopping.png">
+                    <img src="storage/img/money.png">
+            </div>
+    </div>
+    <div class="item_7">
+        <div class="menu_pegajoso">
+            <img src="storage/img/icon.png">
+            <img src="storage/img/icon-1.png">
+            <img src="storage/img/icon-2.png">
+            <img src="storage/img/icon-3.png">
+            <img src="storage/img/icon-4.png">
+        </div>
     </div>
 </body>
 </html>
