--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <div class="banner">
+    <div class="banner"> <img src="storage/img/Group.png">
     </div>
     <div class="item_1">
         <div class="logo_nombre">
