--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css"/>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
-<body>
+<>
     <div class="banner"> <img src="storage/img/Group.png">
     </div>
     <div class="item_1">
@@ -54,14 +54,115 @@
                 <h4>help</h4>
             </div>
         </div>
-    </div>
-    <div class="item_6">
         <div class="Transactions"><h6>Transactions</h6></div>
-            <div class="compras">
-                    <img src="storage/img/food.png"> 
-                    <img src="storage/img/shopping.png">
-                    <img src="storage/img/money.png">
+        <div class="item_6">
+            <div class="compras_cards">
+                <div class="compras_cards_items">
+                    <div class="imagen_mas_texto">
+                        <img src="storage/img/ganancia.png">
+                        <div class="compra_descripcion">
+                            <p>food & beverage</p>
+                            <small>five lods</small>
+                        </div>
+                    </div>
+                    <div class="compra_valor">
+                        <p>+28.11</p>
+                        <small>feb 21</small>
+                    </div>
+                </div>
+                <div class="compras_cards_items">
+                    <div class="imagen_mas_texto">
+                        <img src="storage/img/ganancia.png">
+                        <div class="compra_descripcion">
+                            <p>food & beverage</p>
+                            <small>five lods</small>
+                        </div>
+                    </div>
+                    <div class="compra_valor">
+                        <p>+28.11</p>
+                        <small>feb 21</small>
+                    </div>
+                </div>
+                <div class="compras_cards_items">
+                    <div class="imagen_mas_texto">
+                        <img src="storage/img/ganancia.png">
+                        <div class="compra_descripcion">
+                            <p>food & beverage</p>
+                            <small>five lods</small>
+                        </div>
+                    </div>
+                    <div class="compra_valor">
+                        <p>+28.11</p>
+                        <small>feb 21</small>
+                    </div>
+                </div>
+                <div class="compras_cards_items">
+                    <div class="imagen_mas_texto">
+                        <img src="storage/img/ganancia.png">
+                        <div class="compra_descripcion">
+                            <p>food & beverage</p>
+                            <small>five lods</small>
+                        </div>
+                    </div>
+                    <div class="compra_valor">
+                        <p>+28.11</p>
+                        <small>feb 21</small>
+                    </div>
+                </div>
+                <div class="compras_cards_items">
+                    <div class="imagen_mas_texto">
+                        <img src="storage/img/ganancia.png">
+                        <div class="compra_descripcion">
+                            <p>food & beverage</p>
+                            <small>five lods</small>
+                        </div>
+                    </div>
+                    <div class="compra_valor">
+                        <p>+28.11</p>
+                        <small>feb 21</small>
+                    </div>
+                </div>
+                <div class="compras_cards_items">
+                    <div class="imagen_mas_texto">
+                        <img src="storage/img/ganancia.png">
+                        <div class="compra_descripcion">
+                            <p>food & beverage</p>
+                            <small>five lods</small>
+                        </div>
+                    </div>
+                    <div class="compra_valor">
+                        <p>+28.11</p>
+                        <small>feb 21</small>
+                    </div>
+                </div>
+                <div class="compras_cards_items">
+                    <div class="imagen_mas_texto">
+                        <img src="storage/img/ganancia.png">
+                        <div class="compra_descripcion">
+                            <p>food & beverage</p>
+                            <small>five lods</small>
+                        </div>
+                    </div>
+                    <div class="compra_valor">
+                        <p>+28.11</p>
+                        <small>feb 21</small>
+                    </div>
+                </div>
+                <div class="compras_cards_items">
+                    <div class="imagen_mas_texto">
+                        <img src="storage/img/ganancia.png">
+                        <div class="compra_descripcion">
+                            <p>food & beverage</p>
+                            <small>five lods</small>
+                        </div>
+                    </div>
+                    <div class="compra_valor">
+                        <p>+28.11</p>
+                        <small>feb 21</small>
+                    </div>
+                </div>
             </div>
+    </div>
     </div>
     <div class="item_7">
         <div class="menu_pegajoso">
