--- a/index.html
+++ b/index.html
@@ -8,170 +8,152 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <div class="banner"> <img src="storage/img/Group.png">
-    </div>
-    <div class="item_1">
-        <div class="logo_nombre">
-            <img src="storage/img/icono.png" />
-            <h1>INVETO</h1>
-        </div>
-        <div class="menu">
-            <img src="storage/img/menu.png" />
-        </div>
-    </div>
-    <div class="item_2">
-        <div class="nombre_user">
-            <h1>Hi, Arthur!</h1>
-            <p>Here's Your Balance.</p>
-        </div>
-    </div>
-    <div class="ganancias">
-        <div class="item_3">
-            <h5>SAVINGS</h5>
-            <H3>$15,615</H3>
-            <progress value="80" max="100"></progress>
-        </div>
-        <div class="item_4">
-            <h5>ASSETS</h5>
-            <H3>$9,615</H3>
-            <progress value="30" max="100"></progress>
-        </div>
-    </div>
-    <div class="menu_blanco"> </div>
-    <div class="item_5">
-    <div class="activities"><h6>Activities</h6></div>
-        <div class="cards">
-            <div class="card_1">
-                <img src="storage/img/card1.png">
-                <h4>Account</h4>
+    <header class="header">
+        <div class="header__logo">
+            <div class="logo_icono">
+                <img src="storage/img/icono.png" alt="">
             </div>
-            <div class="card_2">
-                <img src="storage/img/card2.png">
-                <h4>Privacy</h4>
+            <div class="logo__titulo">invento</div>
+        </div>
+        <div class="header__menu">
+            <i class='bx bx-menu'></i>
+        </div>
+    </header>   
+
+    <main class="main">
+        <div class="banner"> <img src="storage/img/Group.png">
+        </div>
+        <section class="item_1">
+            <div class="nombre_user">
+                    <h1>Hi, Arthur!</h1>
+                    <p>Here's Your Balance.</p>
             </div>
-            <div class="card_3">
-                <img src="storage/img/card3.png">
-                <h4>help</h4>
+        </section>
+        <section class="ganancias">
+            <div class="item_2">
+                <div class="item_3">
+                    <h5>SAVINGS</h5>
+                    <H3>$15,615</H3>
+                    <progress value="80" max="100"></progress>
+                </div>
+                <div class="item_4">
+                    <h5>ASSETS</h5>
+                    <H3>$9,615</H3>
+                    <progress value="30" max="100"></progress>
+                </div>
+            </div>
+        </section>
+        <section class="menu">
+        <div class="item_5">
+        <h6>Activities</h6>
+            <div class="cards">
+                <div class="card_1">
+                    <img src="storage/img/card1.png">
+                    <h4>Account</h4>
+                </div>
+                <div class="card_2">
+                    <img src="storage/img/card2.png">
+                    <h4>Privacy</h4>
+                </div>
+                <div class="card_3">
+                    <img src="storage/img/card3.png">
+                    <h4>help</h4>
+                </div>
             </div>
         </div>
-        <div class="Transactions"><h6>Transactions</h6></div>
         <div class="item_6">
-            <div class="compras_cards">
-                <div class="compras_cards_items">
-                    <div class="imagen_mas_texto">
-                        <img src="storage/img/ganancia.png">
-                        <div class="compra_descripcion">
-                            <p>food & beverage</p>
-                            <small>five lods</small>
+            <h6>Transactions</h6>
+                <div class="compras_cards">
+                    <div class="compras_cards_items">
+                        <div class="imagen_mas_texto">
+                            <img src="storage/img/ganancia.png">
+                            <div class="compra_descripcion">
+                                <p>food & beverage</p>
+                                <small>five lods</small>
+                            </div>
+                        </div>
+                        <div class="compra_valor">
+                            <p>+28.11</p>
+                            <small>feb 21</small>
                         </div>
                     </div>
-                    <div class="compra_valor">
-                        <p>+28.11</p>
-                        <small>feb 21</small>
-                    </div>
-                </div>
-                <div class="compras_cards_items">
-                    <div class="imagen_mas_texto">
-                        <img src="storage/img/ganancia.png">
-                        <div class="compra_descripcion">
-                            <p>food & beverage</p>
-                            <small>five lods</small>
+                    <div class="compras_cards_items">
+                        <div class="imagen_mas_texto">
+                            <img src="storage/img/ganancia.png">
+                            <div class="compra_descripcion">
+                                <p>food & beverage</p>
+                                <small>five lods</small>
+                            </div>
+                        </div>
+                        <div class="compra_valor">
+                            <p>+28.11</p>
+                            <small>feb 21</small>
                         </div>
                     </div>
-                    <div class="compra_valor">
-                        <p>+28.11</p>
-                        <small>feb 21</small>
-                    </div>
-                </div>
-                <div class="compras_cards_items">
-                    <div class="imagen_mas_texto">
-                        <img src="storage/img/ganancia.png">
-                        <div class="compra_descripcion">
-                            <p>food & beverage</p>
-                            <small>five lods</small>
+                    <div class="compras_cards_items">
+                        <div class="imagen_mas_texto">
+                            <img src="storage/img/ganancia.png">
+                            <div class="compra_descripcion">
+                                <p>food & beverage</p>
+                                <small>five lods</small>
+                            </div>
+                        </div>
+                        <div class="compra_valor">
+                            <p>+28.11</p>
+                            <small>feb 21</small>
                         </div>
                     </div>
-                    <div class="compra_valor">
-                        <p>+28.11</p>
-                        <small>feb 21</small>
-                    </div>
-                </div>
-                <div class="compras_cards_items">
-                    <div class="imagen_mas_texto">
-                        <img src="storage/img/ganancia.png">
-                        <div class="compra_descripcion">
-                            <p>food & beverage</p>
-                            <small>five lods</small>
+                    <div class="compras_cards_items">
+                        <div class="imagen_mas_texto">
+                            <img src="storage/img/ganancia.png">
+                            <div class="compra_descripcion">
+                                <p>food & beverage</p>
+                                <small>five lods</small>
+                            </div>
+                        </div>
+                        <div class="compra_valor">
+                            <p>+28.11</p>
+                            <small>feb 21</small>
                         </div>
                     </div>
-                    <div class="compra_valor">
-                        <p>+28.11</p>
-                        <small>feb 21</small>
-                    </div>
-                </div>
-                <div class="compras_cards_items">
-                    <div class="imagen_mas_texto">
-                        <img src="storage/img/ganancia.png">
-                        <div class="compra_descripcion">
-                            <p>food & beverage</p>
-                            <small>five lods</small>
+                    <div class="compras_cards_items">
+                        <div class="imagen_mas_texto">
+                            <img src="storage/img/ganancia.png">
+                            <div class="compra_descripcion">
+                                <p>food & beverage</p>
+                                <small>five lods</small>
+                            </div>
                         </div>
-                    </div>
-                    <div class="compra_valor">
-                        <p>+28.11</p>
-                        <small>feb 21</small>
-                    </div>
-                </div>
-                <div class="compras_cards_items">
-                    <div class="imagen_mas_texto">
-                        <img src="storage/img/ganancia.png">
-                        <div class="compra_descripcion">
-                            <p>food & beverage</p>
-                            <small>five lods</small>
+                        <div class="compra_valor">
+                            <p>+28.11</p>
+                            <small>feb 21</small>
                         </div>
-                    </div>
-                    <div class="compra_valor">
-                        <p>+28.11</p>
-                        <small>feb 21</small>
-                    </div>
-                </div>
-                <div class="compras_cards_items">
-                    <div class="imagen_mas_texto">
-                        <img src="storage/img/ganancia.png">
-                        <div class="compra_descripcion">
-                            <p>food & beverage</p>
-                            <small>five lods</small>
-                        </div>
-                    </div>
-                    <div class="compra_valor">
-                        <p>+28.11</p>
-                        <small>feb 21</small>
-                    </div>
-                </div>
-                <div class="compras_cards_items">
-                    <div class="imagen_mas_texto">
-                        <img src="storage/img/ganancia.png">
-                        <div class="compra_descripcion">
-                            <p>food & beverage</p>
-                            <small>five lods</small>
-                        </div>
-                    </div>
-                    <div class="compra_valor">
-                        <p>+28.11</p>
-                        <small>feb 21</small>
                     </div>
                 </div>
             </div>
-    </div>
-    </div>
-    <div class="item_7">
-        <div class="menu_pegajoso">
-            <img src="storage/img/icon.png">
-            <img src="storage/img/icon-1.png">
-            <img src="storage/img/icon-2.png">
-            <img src="storage/img/icon-3.png">
-            <img src="storage/img/icon-4.png">
-        </div>
-    </div>
+        </section>
+    </main>
+
+
+    <footer>
+        <ul>
+            <li>
+                <a href="#"><img src="../storage/img/icon.png" alt=""></a>
+            </li>
+            <li>
+                <a href="#"><img src="../storage/img/icon-1.png" alt=""></a>
+            </li>
+            <li>
+                <a href="#"><img src="../storage/img/icon-2.png" alt=""></a>
+            </li>
+            <li>
+                <a href=""><img src="../storage/img/icon-3.png" alt=""></a>
+            </li>
+            <li>
+                <a href=""><img src="../storage/img/icon-4.png" alt=""></a>
+            </li>
+
+        </ul>
+    </footer>
 </body>
 </html>
