style: :lipstick: font introduction

--- a/index.html
+++ b/index.html
@@ -138,19 +138,19 @@
     <footer>
         <ul>
             <li>
-                <a href="#"><img src="../storage/img/icon.png" alt=""></a>
+                <a href="#"><img src="storage/img/icon.png" alt=""></a>
             </li>
             <li>
-                <a href="#"><img src="../storage/img/icon-1.png" alt=""></a>
+                <a href="view/cards.html"><img src="storage/img/icon-1.png" alt=""></a>
             </li>
             <li>
-                <a href="#"><img src="../storage/img/icon-2.png" alt=""></a>
+                <a href="view/balance.html"><img src="storage/img/icon-2.png" alt=""></a>
             </li>
             <li>
-                <a href=""><img src="../storage/img/icon-3.png" alt=""></a>
+                <a href="#"><img src="storage/img/icon-3.png" alt=""></a>
             </li>
             <li>
-                <a href=""><img src="../storage/img/icon-4.png" alt=""></a>
+                <a href="index.html"><img src="storage/img/icon-4.png" alt=""></a>
             </li>
 
         </ul>
